--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1477,10 +1477,17 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		}
 	}
 	.media-folder_icon{
-		flex-basis: 70px;
+		-ms-flex-preferred-size: 52px;
+		flex-basis: 52px;
+		width: 52px;
     	padding-left: 10px;
-		img{
-			max-width: 35px;
+		>a i{
+			font-size: 30px;
+			color: #9ca8b4;
+			margin-top: 5px;
+			&.bb-icon-folder-stacked{
+				font-size: 23px;
+			}
 		}
 	}
 	.media-folder_details{
