--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -2310,12 +2310,12 @@ span.dashicons.dashicons-admin-file:before {
 
 .bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-action-wrap .document-action_list ul li a:hover {
   background-color: #f5f5f5;
+  color: #5087e5;
 }
 
 .bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-action-wrap .document-action_list ul li a:before {
   font-family: 'bb-icons';
   font-size: 16px;
-  vertical-align: middle;
   display: inline-block;
   margin-left: 10px;
   width: 20px;
@@ -12150,6 +12150,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 
 #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list ul li a:hover {
   background-color: #F5F5F5;
+  color: #5087e5;
 }
 
 #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list ul li a:before {
