--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -674,3 +674,11 @@ input#send-to-input {
 		}
 	}
 }
+
+@media screen and (max-width: 767px) {
+
+	.bp-messages-user-threads,
+	#bp-message-thread-list {
+		max-height: 400px;
+	}
+}
