--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1606,7 +1606,8 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 						font-size: 13px;
 					}
 					&.delete_file a:before{
-						content: '\eaea';
+						content: '\e937';
+						font-size: 15px;
 					}
 				}
 			}
