--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -394,6 +394,10 @@ div[class*="attached-gif-container"] {
 		color: #fff;
 		margin-top: 0;
 		position: absolute;
+		.bb-icon-close{
+			font-size: 20px;
+			vertical-align: top;
+		}
 	}
 
 	.gif-player {
