--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -522,7 +522,7 @@ input#send-to-input {
 	font-size: 0;
 
 	&:after {
-		content: '\e910';
+		content: '\E80C';
 		font-size: 20px;
 		line-height: 1;
 		font-family: "bb-icons";
